# File-Manager

./: .gitignore  CMakeCache.txt.prev  FileManger  Makefile  PiechartWidget.cpp  PiechartWidget.h  README  README.md  addonsbar.cpp  addonsbar.h  cmake_install.cmake  identifyduplicates.cpp  identifyduplicates.h  identifyduplicatespagewidget.cpp  identifyduplicatespagewidget.h  install-boost.sh  integrate.cpp  integrate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  piechart.cpp  piechart.h  piechartpagewidget.cpp  propertiespagewidget.cpp  qtcsettings.cmake  statistics.cpp  statistics.h  testPieChart.pro
.cmake/api/v1/reply/: cache-v2-e26d9556d2311bc7bfc8.json  cmakeFiles-v1-eb1a43ee4ec22b65d2e8.json  codemodel-v2-4ad75c4880871b282c21.json  directory-.-Debug-61603fd43c287ca2b256.json  index-2023-04-13T14-46-37-0148.json  target-FileManger-Debug-5802df714a60c231d524.json  target-FileManger_autogen-Debug-40496f637a25293301cd.json
.qt/: QtDeploySupport.cmake
FileMangerQT/: Actions.h  CMakeLists.txt  CMakeLists.txt.user.daf14ab  CMakeLists.txt.user.e780cdf  Constants.h  PiechartWidget.cpp  PiechartWidget.h  UndoClasses.h  addonsbar.cpp  addonsbar.h  backbutton.cpp  backbutton.h  compression.cpp  compression.h  contentfilessearch.cpp  contentfilessearch.h  controller.cpp  controller.h  conversions.h  copyundo.h  customtable.cpp  customtable.h  customtwopathwidget.cpp  customtwopathwidget.h  explorer.cpp  explorer.h  explorermin.cpp  explorermin.h  filecontentview.cpp  filecontentview.h  filecontentview.ui  fileoperations.cpp  fileoperations.h  files_search.cpp  files_search.h  identifyduplicates.cpp  identifyduplicatespagewidget.cpp  identifyduplicatespagewidget.h  locationbar.cpp  locationbar.h  (+52 more)
FileMangerQT/QSS/: MacOS.qss
FileManger_autogen/: mocs_compilation.cpp
FileManger_autogen/EWIEGA46WW/: moc_controller.cpp  moc_controller.cpp.d  moc_filecontentview.cpp  moc_filecontentview.cpp.d  moc_view.cpp  moc_view.cpp.d
FileManger_autogen/include/: ui_filecontentview.h  ui_view.h
